# Projects

./: .gitignore  Projects.sln  README.md  index.html  ssFucking.txt  sshKey.pub  test  zProjectPlan.txt
docs/: blog.html  blog.js  frontpage.html  index.html  navigation.css  navigation.html  navigationLinks.json  navigationLoader.js  project_page_loader.js  project_viewer.js  projects.html  projects.js  projects.json  style.css  topics.json
docs/blog_pages/: Intro.md
docs/css/: blog.css  frontpage.css  project.css  style.css
docs/data/: projects.json  roadmap.json  techStack.json  topics.json
docs/html/: backend_newEntry.html  blog.html  frontpage.html  index.html  mermaid.html  navigation.html  post.html  projects.html  roadmap.html
docs/js/: blog.js  dashboard.js  frontpage.js  navigationLoader.js  project_loader.js  projects.js
docs/posts/: linear_algebra.md  llm_basics.md  returns.md
docs/project_pages/: dashboard.md  kafka_simulation.md  markdown_commands.md
source/Low Latency Market Data Pipeline _/: LowLatencyMarketDataPipeline.md
source/Low_Latency_Market_Data_Pipeline/: .gitignore  CMakeLists.txt  CMakePresets.json  LowLatencyMarketDataPipeline.md
source/Low_Latency_Market_Data_Pipeline/Low_Latency_Market_Data_Pipeline/: CMakeLists.txt  Low_Latency_Market_Data_Pipeline.cpp  Low_Latency_Market_Data_Pipeline.h
source/Low_Latency_Market_Data_Pipeline/TestCases/: TestCase_1.txt  TestCase_2.txt  TestCase_3.txt
source/kafka_simulation/: KafkaProjekt.md  Program.cs  Simulation.cs  docker-aufbau.txt  docker-compose.yml  kafka_simulation.csproj  kafka_simulation.md
source/website/: blog.html  blog.js  dashboard.html  db.js  (+11 more)
(+56 files in other folders)
