# CMakeList.txt: CMake-Projektdatei der obersten Ebene. Führen Sie hier die globale Konfiguration aus,
# und schließen Sie Unterprojekte ein.
#
cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project ("Low_Latency_Market_Data_Pipeline")

# Schließen Sie Unterprojekte ein.
add_subdirectory ("Low_Latency_Market_Data_Pipeline")
