# CMakeList.txt: CMake-Projekt für "Low_Latency_Market_Data_Pipeline". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#

# Fügen Sie der ausführbaren Datei dieses Projekts eine Quelle hinzu.
add_executable (main "Low_Latency_Market_Data_Pipeline.cpp" "Low_Latency_Market_Data_Pipeline.h")

# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
